@@ -19,10 +19,7 @@
 
 :- import_module libs.
 :- import_module libs.globals.
-:- import_module mdbcomp.
-:- import_module mdbcomp.sym_name.
 :- import_module parse_tree.error_util.
-:- import_module parse_tree.prog_data.
 :- import_module parse_tree.prog_item.
 
 :- import_module list.
@@ -44,6 +41,9 @@
 :- implementation.
 
 :- import_module libs.options.
+:- import_module mdbcomp.
+:- import_module mdbcomp.sym_name.
+:- import_module parse_tree.prog_data.
 
 :- import_module bool.
 :- import_module map.
