@@ -36,7 +36,6 @@
 :- import_module map.
 :- import_module maybe.
 :- import_module pair.
-:- import_module string.
 
 %---------------------------------------------------------------------------%
 
@@ -232,6 +231,7 @@
 
 :- import_module bool.
 :- import_module int.
+:- import_module string.
 :- import_module varset.
 
 %---------------------------------------------------------------------------%
