@@ -14,7 +14,6 @@
 :- import_module hlds.
 :- import_module hlds.const_struct.
 :- import_module hlds.hlds_goal.
-:- import_module hlds.hlds_rtti.
 :- import_module parse_tree.
 :- import_module parse_tree.prog_data.
 
@@ -81,6 +80,7 @@
 :- import_module hlds.hlds_code_util.
 :- import_module hlds.hlds_module.
 :- import_module hlds.hlds_pred.
+:- import_module hlds.hlds_rtti.
 :- import_module hlds.instmap.
 :- import_module hlds.make_goal.
 :- import_module hlds.pred_table.
