@@ -487,6 +487,10 @@ Changes to the Mercury compiler
   keep `opt1` enabled even if `opt1` is not normally enabled at optimization
   level `N`.
 
+* Due to a bugx fix, the --warn-unused-imports is now stricter in warning
+  about modules that are imported in the interface section but are not used
+  in the interface section.
+
 Portability improvements
 ------------------------
 
